# bite

./: README.md  bite.opam  dune-project
example/: 001.bite.txt  002.bite.ast.txt  002.bite.txt  003.bite.ast.txt  003.bite.txt  004.bite.txt  adt.bite.txt  fib.bite.txt
lib/: cir.ml  codegen.ml  dune  errors.ml  lexer.mll  parser.mly  runtime.ml  scope.ml  semantic.ml  syntax.ml  tokens.mly  trie.ml  typechecking.ml  types.ml
runtime/: Makefile  runtime.c  runtime.h  runtime.ll
test/: dune
