(menhir
 (modules tokens)
 (flags --only-tokens))

(menhir
 (modules tokens parser)
 (merge_into parser)
 (flags --external-tokens Tokens --dump --explain))

(ocamllex lexer)

(library
 (name bite)
 (libraries llvm)
 (preprocess (pps ppx_deriving.show ppx_deriving.ord))
 (modules
  lexer
  tokens
  parser
  syntax
  types
  semantic
  cir
  codegen
  scope
  errors
  ))

(env
  (dev
    (flags (:standard -warn-error -A -g))))
